# wsl_open_vscode

./: Cargo.toml  README.md
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  index.html  search-index.js  settings.html  source-files.js
docs/src/wsl_open_vscode/: lib.rs.html
docs/wsl_open_vscode/: all.html  fn.open_vscode.html  index.html  sidebar-items.js
src/: lib.rs
