[package]
name = "wsl_open_vscode"
version = "0.1.0"
authors = ["Luciano Bestia <LucianoBestia@gmail.com>"]
description = "Open folder in VSCode from WSL2 simply with `code .`"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unwrap="1.2.1"

