[package]
name = "wsl_open_vscode"
version = "2021.814.1238"
authors = ["Luciano Bestia"]
description = "Open folder in VSCode from WSL2 simply with `$ code .`"
repository = "https://github.com/lucianobestia/dropbox_backup_to_external_disk/"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unwrap="1.2.1"

